--- a/game.html
+++ b/game.html
@@ -22,7 +22,16 @@
       <!-- Grid will be generated dynamically with JavaScript -->
     </div>
 
-    <button id="hint-button">Hint</button>
+    <div class="game-controls">
+      <button id="start-timer">Start Timer</button>
+      <button id="end-game">End Game</button>
+      <button id="new-game">New Game</button>
+    </div>
+
+    <div id="timer">
+      <p id="timer-display">Time: 0s</p>
+    </div>
+
     <div id="hint" style="display: none;">
       <p>Click the letters to find hidden words!</p>
     </div>
